<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/tv_imgpath"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="16sp"
        android:visibility="gone"
        android:textColor="@color/black"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dip"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="28sp"
                android:textColor="@color/iv_put"
                android:textStyle="bold"
                android:text="@string/kdg7"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:text="@string/kdg8"
                android:textStyle="bold"
                android:textSize="28sp"
                android:textColor="@color/iv_put"
                />
        </LinearLayout>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:layout_marginLeft="50dip"
            android:src="@mipmap/savezs"/>
        <ImageView
            android:id="@+id/iv_saveimg"
            android:layout_width="140dip"
            android:layout_height="140dip"
            android:background="@color/bgGoHome"
            android:layout_marginLeft="50dip"
            android:scaleType="centerCrop"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:paddingTop="10dip"
            android:paddingBottom="10dip"
            android:paddingLeft="15dip"
            android:paddingRight="15dip"
            android:background="@drawable/bg_put_meal_sure1"
            android:text="@string/kdg9"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:src="@mipmap/saveleft"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:paddingTop="10dip"
                android:paddingBottom="10dip"
                android:paddingLeft="15dip"
                android:paddingRight="15dip"
                android:background="@drawable/bg_put_meal_sure1"
                android:text="@string/kdg10"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_marginTop="5dip"
                android:textColor="@color/iv_put"
                android:text="@string/kdg11"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:paddingTop="10dip"
                android:paddingBottom="10dip"
                android:paddingLeft="15dip"
                android:paddingRight="15dip"
                android:layout_marginTop="5dip"
                android:background="@drawable/bg_put_meal_sure1"
                android:text="@string/kdg12"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_marginTop="5dip"
                android:textColor="@color/iv_put"
                android:text="@string/kdg13"/>
        </LinearLayout>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:src="@mipmap/saveright"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:paddingTop="10dip"
            android:paddingBottom="10dip"
            android:paddingLeft="15dip"
            android:paddingRight="15dip"
            android:background="@drawable/bg_put_meal_sure1"
            android:text="@string/kdg14"/>
        <View
            android:layout_width="20dip"
            android:layout_height="2dip"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:background="@color/iv_put"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:paddingTop="10dip"
            android:paddingBottom="10dip"
            android:paddingLeft="15dip"
            android:paddingRight="15dip"
            android:background="@drawable/bg_put_meal_sure1"
            android:text="@string/kdg15"/>
        <View
            android:layout_width="20dip"
            android:layout_height="2dip"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:background="@color/iv_put" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:paddingTop="10dip"
            android:paddingBottom="10dip"
            android:paddingLeft="15dip"
            android:paddingRight="15dip"
            android:background="@drawable/bg_put_meal_sure1"
            android:text="@string/kdg16"/>
    </LinearLayout>

</LinearLayout>