<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/ll_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dip">

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:drawableLeft="@mipmap/hometime"
                android:drawablePadding="8dip"
                android:gravity="center_vertical"
                android:text="@string/kdg3"
                android:textColor="@color/bgGoHome"
                android:textSize="12sp" />


            <TextView
                android:id="@+id/tv_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:background="@color/white"
                android:drawableLeft="@mipmap/homelocation"
                android:drawablePadding="8dip"
                android:text="@string/kdg4"
                android:textColor="@color/bgGoHome"
                android:textSize="12sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/iv_homelogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/homebs" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_putNget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/iv_get"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="fitCenter"
                android:src="@mipmap/get_meal" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/iv_get"
                android:text="@string/get_meal"
                android:layout_marginBottom="40dip"
                android:layout_centerHorizontal="true"
                android:textColor="#F79A17"
                android:textSize="20sp"/>
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="120dip">

            <ImageView
                android:id="@+id/iv_put"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="fitCenter"
                android:src="@mipmap/save_meal" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/iv_put"
                android:text="@string/save_meal"
                android:layout_marginBottom="40dip"
                android:layout_centerHorizontal="true"
                android:textColor="@color/iv_put"
                android:textSize="20sp"/>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dip"
        android:gravity="center_vertical"
        android:layout_alignParentBottom="true">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/kdg5"
            android:textColor="@color/bgGoHome"
            android:textSize="12sp"/>
        <ImageView
            android:id="@+id/iv_wifiinfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/homewifiimg"/>
    </LinearLayout>
</RelativeLayout>